[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stream*"]  # only ship the stream package, not top-level scripts/outputs/plots dirs
namespaces = true

[tool.setuptools.package-data]
# Ship the static hardware-description YAMLs so a pip-installed package can run
# codegen without a checkout. (.py-only is the setuptools default; declare the
# data files explicitly.) cores/ holds the per-tile descriptions referenced by
# the top-level accelerator YAMLs. Test workloads/onnx fixtures are intentionally
# NOT shipped.
"stream" = [
    "inputs/aie/hardware/*.yaml",
    "inputs/aie/hardware/cores/*.yaml",
    "inputs/examples/hardware/*.yaml",
    "inputs/examples/hardware/cores/*.yaml",
]

[project]
name = "stream-dse"
version = "1.13.6"
description = "Stream - Multi-core accelerator design space exploration with layer-fused scheduling"
readme = "README.md"
authors = [{ name = "Arne Symons", email = "arne.symons@kuleuven.be" }, { name = "Linyan Mei", email = "linyan.mei@kuleuven.be" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
]
keywords = ["stream", "multi-core", "accelerator", "layer-fused", "scheduling", "zigzag", "dse", "design-space-exploration", "machine-learning", "deep-learning", "mapping"]
dependencies = [
    "zigzag-dse==3.8.5",
    "cerberus",
    "ortools>=9.15",
    "pydantic>=2.0,<2.12",
    "pydot",
    "xdsl>=0.29.1,<0.30",
]
requires-python = ">=3.12"


[project.optional-dependencies]
# NOTE: `[mcp]` does not resolve against the pinned `xdsl<0.30` today. fastmcp's transitive
# deps (py-key-value-aio, mcp) need typing-extensions>=4.15 and pydantic>=2.12, but xdsl 0.29.1
# caps typing-extensions<4.13 (and we cap pydantic<2.12), so a fresh `pip install .[mcp]` fails.
# It installs only against a newer/git xdsl. Clean fix = bump xdsl (>=0.36 loosens the cap),
# which first needs the AIE toolchain (xdsl-aie/snax-mlir) updated to that xdsl.
mcp = ["fastmcp>=3.2.4"]
# Gurobi is a commercial solver (license required at solve time); OR-Tools GSCIP is the
# default, license-free backend, so gurobipy is opt-in rather than a base dependency.
gurobi = ["gurobipy"]
# Exact integer-set path for the affine access IR (stream/workload/affine_exact.py). Optional:
# affine_access derives relevancy/footprint/dependencies without it; islpy only tightens
# non-permutation dependency regions the affine box cannot represent.
exact = ["islpy"]
# torch.export frontend (stream/frontends/torch_export.py). Optional: the conversion is torch-free and
# unit-tested without it; torch is only needed to lower a real ExportedProgram. Heavy, so opt-in.
torch = ["torch>=2.4"]
dev = ["bumpver", "pip-tools", "build", "twine", "pre-commit", "pytest", "pytest-timeout", "hypothesis"]
# The optional AIE codegen toolchain (mlir_aie/llvm_aie wheels, xdsl-aie, snax-mlir,
# aie-python-extras) cannot be an extra: those are direct-reference (git/URL) installs that
# PyPI forbids in package metadata. Install it after `pip install stream-dse` with the
# `stream-setup-aie` console script (see [project.scripts] below). Linux x86_64, CPython 3.12/3.13.

[project.scripts]
stream-setup-aie = "stream.aie_setup:main"

# Plugin boundaries (Phase 2 moat seam): an out-of-tree private overlay registers its own workload
# frontends and reference blocks through these entry-point groups -- no fork of the public repo. The
# public package ships only the framework, interfaces, taxonomy, and toy/reference implementations.
[project.entry-points."stream.frontends"]
onnx = "stream.frontends.onnx:OnnxFrontend"
torch_export = "stream.frontends.torch_export:TorchExportFrontend"

[project.entry-points."stream.workload_blocks"]
# Built-in blocks register in-tree (stream.workload.blocks); overlays add their own entries here.

[project.urls]
Homepage = "https://github.com/KULeuven-MICAS/stream"

[tool.bumpver]
current_version = "1.13.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"stream/__init__.py" = ["{version}"]


[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (integration tests against real TETRA instances)",
]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
lint.select = ["E", "F", "W", "I", "PL", "N", "UP", "B"]
# UP040: keep the explicit `X: TypeAlias = ...` idiom (used throughout); the py312 target would
# otherwise push the PEP 695 `type X = ...` form, whose lazy TypeAliasType has different runtime
# semantics (e.g. not usable in isinstance) — not a change we want to force here.
lint.ignore = ["D401", "N806", "N802", "PLW1641", "UP040"]
lint.pylint.max-args = 8
lint.per-file-ignores."tests/**" = ["PLR2004", "PLC0415", "PLR0915", "N803"]
lint.per-file-ignores."scripts/**" = ["PLR0913", "N803"]

[tool.pyright]
# Version-controlled Pylance/Pyright settings so every contributor gets the same,
# signal-rich diagnostics regardless of their personal global VS Code setting.
include = ["stream", "scripts", "tests"]
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
# KEPT ON (cheap, high-signal — catch real bugs): reportMissingImports,
# reportUndefinedVariable, reportPossiblyUnbound, reportSelfClsParameterName,
# reportRedeclaration, and all syntax errors (pyright defaults).
# SILENCED below: deep type-inference rules dominated by untyped third-party code
# (xDSL IRDL dialect ops, zigzag, gurobipy, numpy/matplotlib) and intentional dynamic
# patterns (CoreCostEntry.__getattr__ delegation, StageContext.get() -> Any). These
# produced ~470 non-actionable diagnostics. Re-enable selectively if adopting typing.
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportOptionalMemberAccess = "none"
reportOptionalCall = "none"
reportOptionalOperand = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"
reportIndexIssue = "none"
reportReturnType = "none"
reportAssignmentType = "none"
reportGeneralTypeIssues = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportOperatorIssue = "none"
